<resources>
    <string name="app_name">Name-app</string>
    <string name="list_names">List of names</string>
    <string name="gallery">Gallery</string>
    <string name="learningMode">Learning Mode</string>
    <string name="scoreView">Your score is: </string>
    <string name="title_activity_learning_mode">LearningModeActivity</string>
    <string name="title_activity_learning_mode_question">LearningModeQuestion</string>
    <string name="edit_message">Enter name</string>
    <string name="add_name">Add a name</string>
    <string name="add_from_camera">Take a picture</string>
    <string name="highscore">Highscore</string>
    <string name="start_game">Start game</string>
    <string name="home">Home</string>
    <string name="owner">Owner</string>
    <string name="save">Save</string>
    <string name="registerOwner">Please register owner before continuing</string>
    <string name="next">Next</string>
    <string name="score">Score:</string>
    <string name="title_activity_list_gallery">ListGalleryActivity</string>
    <string name="add_picture">Add a picture</string>
    <string name="add_from_gallery">Add picture from gallery</string>
    <string name="title_list_Activity">ListActivity</string>
    <string name="title_settings_Activity">SettingsActivity</string>
    <string name="title_show_person_Activity">ShowPersonActivity</string>
    <string name="title_main_gallery">MainActivity</string>
    <array name="people">
        <item>Adam Sandler+adam_sandler</item>
        <item>Andy Signore+andy_signore</item>
        <item>Bill Murray+bill_murray</item>
        <item>Johnny Depp+johnny_depp</item>
        <item>Kim Kardashian+kim_kardashian</item>
        <item>Mel Blanc+mel_blanc</item>
        <item>Miley Cyrus+miley_cyrus</item>
        <item>Ozzy Osbourne+ozzy_osbourne</item>
        <item>Robert Downey Jr+robert_downey_jr</item>
        <item>Usain Bolt+usain_bolt</item>
    </array>
</resources>
