<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.carmen.name_app.LearningModeActivity"
    tools:showIn="@layout/activity_learning_mode"
    android:background="@color/background"
    >

    <Button
        android:id="@+id/buttonHome"
        android:layout_width="94dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/darker_gray"
        android:text="@string/home"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="316dp"
        android:layout_height="288dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497">

        <Button
            android:id="@+id/startGame"
            android:layout_width="221dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="80dp"
            android:text="@string/start_game" />

        <Button
            android:layout_height="wrap_content"
            android:text="@string/highscore"
            android:layout_width="221dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"

            />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
