<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.carmen.name_app.LearningModeQuestion"
    tools:showIn="@layout/activity_learning_mode_question"
    android:background="@color/background"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="p4arent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include layout="@layout/homebar" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="200dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="0dp"
                android:text="@string/score"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.962"
                app:layout_constraintStart_toEndOf="@+id/buttonHome"
                app:layout_constraintVertical_bias="0.0" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="293dp"
            android:layout_height="259dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="60dp"
            app:srcCompat="@drawable/mushroom" />


        <LinearLayout
            android:layout_width="384dp"
            android:layout_height="239dp"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/edit_message"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/buttonNext"
                android:layout_width="94dp"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@android:color/darker_gray"
                android:text="@string/next"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.129" />


        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
